--- a/mazeppa.opam
+++ b/mazeppa.opam
@@ -17,11 +17,11 @@ depends: [
   "ppx_string_interpolation"
   "ppx_yojson_conv"
   "ppx_blob" {>= "0.9.0"}
-  "bisect_ppx"
+  "bisect_ppx" {with-test}
   "menhir" {>= "20180905"}
   "spectrum" {>= "0.6.0"}
   "clap"
-  "alcotest" {>= "1.7.0"}
+  "alcotest" {with-test & >= "1.7.0"}
   "odoc" {with-doc}
 ]
 build: [
